# ripple

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: network.rs
core/src/network/: address.rs  behaviour.rs  messages.rs
core/src/network/node/: client.rs  handler.rs  pow_worker.rs  worker.rs
core/src/pow/: async_pow.rs
core/src/repositories/sqlite/: address.rs  inventory.rs
devzone/: docker-compose.yaml
gui/: Cargo.toml  build.rs
gui/src/: app.rs  main.rs
gui/src/components/: identities_list.rs  message_composer.rs  messages.rs  messages_content.rs  messages_sidebar.rs  network_status.rs
gui/src/components/dialogs/: identity_dialog.rs
gui/src/components/factories/: identity_list_row.rs
gui/src/components/utils/: typed_list_view.rs
tauri-gui/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-gui/src/: App.tsx
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/src/: main.rs
tauri-gui/src/components/: AppSidebar.tsx
tauri-gui/src/pages/: About.tsx  Identities.tsx  Messages.tsx  NetworkStatus.tsx  Settings.tsx
tauri-gui/src/types/: jdenticon.d.ts
