[workspace]
members = ["gui", "core", "cli", "tauri-gui/src-tauri"]
resolver = "2"
default-members = ["gui"]

[workspace.dependencies]
ripple-core = { version = "0.1.0", path = "core" }
log = "0.4.17"
async-std = { version = "1.12.0", features = ["attributes"] }
pretty_env_logger = "0.4.0"
directories = "5.0.1"
chrono = "0.4.24"

[profile.release]
panic = "abort"
