[workspace]
members = ["gui", "core", "cli", "tauri-gui/src-tauri"]
resolver = "2"
default-members = ["gui"]

[workspace.dependencies]
ripple-core = { version = "0.1.0", path = "core" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
directories = "5.0.1"
chrono = "0.4.24"
tokio = { version = "1.48.0", features = ["macros"] }

[profile.release]
panic = "abort"
