[workspace]
members = ["gui", "core", "cli"]
resolver = "2"
default-members = ["gui"]

[workspace.dependencies]
ripple-core = { version = "0.1.0", path = "core" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
directories = "5.0.1"
chrono = "0.4.24"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
