[package]
name = "ripple-gtk-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
async-std = { workspace = true }
relm4 = { version = "0.10.0", features = ["libadwaita"] }
relm4-components = "0.10.0"
relm4-icons = { version = "0.10.0" }
directories = { workspace = true }
identicon-rs = "4.0.1"
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_5"] }
gtk = { package = "gtk4", version = "0.10.1", features = ["v4_14"] }
mail-parser = "0.8.2"

log = { workspace = true }
pretty_env_logger = { workspace = true }
chrono = { workspace = true }

ripple-core = { workspace = true }

[build-dependencies]
relm4-icons-build = "0.10"
